# mlops-training

./: .actrc  .gitignore  pyproject.toml
.github/workflows/: hello.yaml
consignes/: 1-repro.md  2-serving.md  3-orchestration.md  4-observability.md  5-cicd.md  7-hpo.md
src/observability/: capture.py  online_monitor.py
src/orchestration/: client.py
src/orchestration/pipelines/: hello.py
src/scripts/: infer.py  train.py
src/utils/: generate_churn_dataset.py  seeds.py
tests/fixtures/: sample.parquet
tests/golden/: server_predictions.json
