[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-predictor"
version = "0.1.0"
description = "Churn Prediction Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mlflow>=3.12,<3.13",
    "numpy>=2.0.0",
    "pandas>=2.3.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.9.0",
    "scikit-learn>=1.8.0",
    "kserve>=0.13.0",
    "kfp>=2.16.0",
    "evidently>=0.7,<0.8",
    "kubeflow>=0.1",
    "torch>=2.2.0",
    "pandera>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]


[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
exclude-newer = "2026-06-01T00:00:00Z"
override-dependencies = ["pyasn; sys_platform == 'no-such-os'"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["serving", "observability", "orchestration", "scripts", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
files = ["src/serving/server.py"]
ignore_missing_imports = true
disallow_untyped_defs = false
